# hsatracker

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0004_app_settings.py  0005_settings_theme.py
backend/app/: constants.py  crud.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: contributions.py  expenses.py  receipts.py  reimbursements.py  settings.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: settings.ts
frontend/src/components/balance/: BalanceFormModal.tsx
frontend/src/components/contributions/: ContributionFormModal.tsx  ContributionLimitBar.tsx
frontend/src/components/expenses/: ExpenseFormModal.tsx
frontend/src/components/layout/: Layout.tsx  Sidebar.tsx  TopBar.tsx
frontend/src/components/receipts/: ReceiptList.tsx  ReceiptUpload.tsx
frontend/src/components/reimbursements/: MarkReimbursedModal.tsx  TrackReimbursementModal.tsx
frontend/src/components/ui/: Badge.tsx  Modal.tsx  Skeleton.tsx
frontend/src/lib/: constants.ts  formatters.ts  theme.tsx
frontend/src/pages/: AccountPage.tsx  BalancePage.tsx  ContributionsPage.tsx  DashboardPage.tsx  ExpensesPage.tsx  ReimbursementsPage.tsx  SettingsPage.tsx
frontend/src/types/: index.ts
